[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/font/MILLENNIA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Textures/ButtonSimplePress.png" type="Texture" id=2]
[ext_resource path="res://assets/Textures/ButtonGreenDef.png" type="Texture" id=3]
[ext_resource path="res://assets/Textures/ButtonGreenPress.png" type="Texture" id=4]
[ext_resource path="res://assets/PixelAdventure2/Enemies/Skull/Idle 2 (52x54).png" type="Texture" id=5]
[ext_resource path="res://assets/Textures/lose_back.png" type="Texture" id=6]
[ext_resource path="res://assets/Textures/ButtonGreenHover.png" type="Texture" id=7]
[ext_resource path="res://assets/Textures/ButtonSimpleHover.png" type="Texture" id=8]
[ext_resource path="res://assets/Textures/ButtonSimpleDef.png" type="Texture" id=9]
[ext_resource path="res://src/UI/PopUps/GameOverOverlay.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = -2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 26
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = -2
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 52, 54 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 52, 0, 52, 54 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 104, 0, 52, 54 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 156, 0, 52, 54 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 208, 0, 52, 54 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 260, 0, 52, 54 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 312, 0, 52, 54 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 364, 0, 52, 54 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "loose",
"speed": 5.0
} ]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 10 )

[node name="Loose_PopUp" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="Panel" parent="Loose_PopUp"]
modulate = Color( 1, 1, 1, 0.0784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopUp" type="NinePatchRect" parent="Loose_PopUp"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -155.0
margin_top = -165.0
margin_right = 155.0
margin_bottom = 165.0
rect_min_size = Vector2( 310, 330 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="Loose_PopUp/PopUp"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = 72.5
margin_right = 125.0
margin_bottom = 183.5
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="Loose_PopUp/PopUp/Buttons"]
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 50 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 7 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Loose_PopUp/PopUp/Buttons/StartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.0
margin_top = -19.0
margin_right = 117.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
text = "Restart
"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton3" type="TextureButton" parent="Loose_PopUp/PopUp/Buttons"]
margin_top = 60.0
margin_right = 250.0
margin_bottom = 110.0
rect_min_size = Vector2( 250, 50 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Loose_PopUp/PopUp/Buttons/StartButton3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.0
margin_top = -19.0
margin_right = 117.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skull" type="AnimatedSprite" parent="Loose_PopUp/PopUp"]
position = Vector2( 159.397, 184.197 )
scale = Vector2( 2, 2 )
frames = SubResource( 11 )
animation = "loose"
frame = 2
playing = true
